--- a/deno.json
+++ b/deno.json
@@ -21,14 +21,14 @@
     "singleQuote": true
   },
   "tasks": {
-    "dev": "export DENO_FLAGS=--watch ; deno task init-build ; deno task bundle-css & deno task fmt & deno task bundle-js & deno task bundle-worker & deno task serve-build",
+    "dev": "export DENO_FLAGS=--watch ; mkdir -p build/ ; cp static/* build/ ; deno task fmt & deno task bundle-css & deno task bundle-js & deno task bundle-worker & deno task serve-build",
     "fmt": "deno fmt $DENO_FLAGS",
     "lint": "deno lint $DENO_FLAGS",
-    "init-build": "mkdir -p static/build/",
-    "bundle-css": "deno run --allow-all npm:tailwindcss --input main.css --output static/build/main.css $DENO_FLAGS",
-    "bundle-js": "deno bundle $DENO_FLAGS --check app.tsx static/build/index.js",
-    "bundle-worker": "deno bundle $DENO_FLAGS --check ../scaffold/src/worker/worker.ts static/build/worker.js",
-    "serve-build": "deno run --allow-net --allow-read https://deno.land/std@0.212.0/http/file_server.ts static/ --port 17542 --header 'Cross-Origin-Opener-Policy: same-origin' --header 'Cross-Origin-Embedder-Policy: credentialless'"
+    "bundle-css": "deno run --allow-all npm:tailwindcss --input main.css --output build/main.css $DENO_FLAGS",
+    "bundle-js": "deno run $DENO_FLAGS --allow-all --check build.tsx",
+    "old-bundle-js": "deno bundle $DENO_FLAGS --check app.tsx static/build/index.js",
+    "bundle-worker": "deno bundle $DENO_FLAGS --check ../scaffold/src/worker/worker.ts build/worker.js",
+    "serve-build": "deno run --allow-net --allow-read https://deno.land/std@0.212.0/http/file_server.ts build/ --port 17542 --header 'Cross-Origin-Opener-Policy: same-origin' --header 'Cross-Origin-Embedder-Policy: credentialless'"
   },
   "imports": {
     "_scaffold/": "https://raw.githubusercontent.com/scaffold/scaffold/main/",
