--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Setup Deno
         uses: denoland/setup-deno@v1.1.3
       - name: Render static site
-        run: deno task build
+        run: deno task render
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
