--- a/deno.json
+++ b/deno.json
@@ -49,7 +49,7 @@
     "singleQuote": true
   },
   "tasks": {
-    "dev": "export DENO_FLAGS=--watch ; mkdir -p build/ ; cp static/* build/ ; deno task fmt & deno task bundle-css & deno task bundle-js & deno task bundle-worker & deno task serve-build",
+    "dev": "export DENO_FLAGS=\"--watch --watch-exclude=build/\" ; mkdir -p build/ ; cp static/* build/ ; deno task fmt & deno task bundle-css & deno task bundle-js & deno task bundle-worker & deno task serve-build",
     "build": "export MINIFY=true DENO_FLAGS= ; mkdir -p build/ ; cp static/* build/ ; deno task bundle-css & deno task bundle-js",
     "fmt": "deno fmt $DENO_FLAGS",
     "lint": "deno lint $DENO_FLAGS",
@@ -60,21 +60,23 @@
     "serve-build": "deno run --allow-net --allow-read https://deno.land/std@0.217.0/http/file_server.ts build/ --port 17542 --header 'Cross-Origin-Opener-Policy: same-origin' --header 'Cross-Origin-Embedder-Policy: credentialless'"
   },
   "imports": {
-    "_scaffold/": "https://raw.githubusercontent.com/scaffold/scaffold/main/",
-    "scaffold/": "../scaffold/",
-    "ts-examples/": "../examples/ts/",
     "$std/": "https://deno.land/std@0.217.0/",
+    "@std/bytes": "jsr:@std/bytes@^1.0.0",
+    "@std/data-structures": "jsr:@std/data-structures@^0.225.2",
+    "_scaffold/": "https://raw.githubusercontent.com/scaffold/scaffold/main/",
+    "angle-normals": "https://esm.sh/angle-normals@1.0.0?target=esnext&pin=v135",
+    "bunny": "https://esm.sh/bunny@1.0.1?target=esnext&pin=v135",
+    "gl-matrix": "https://esm.sh/gl-matrix@3.4.1?target=esnext&pin=v135",
     "react": "https://esm.sh/react@18.2.0?target=esnext&pin=v135",
     "react-dom": "https://esm.sh/react-dom@18.2.0?target=esnext&pin=v135",
-    "react-server": "https://esm.sh/react-dom@18.2.0/server?target=esnext&pin=v135",
-    "react-router-dom": "https://esm.sh/react-router-dom@6.4.4?target=esnext&pin=v135",
     "react-icons/bs": "https://esm.sh/react-icons@4.10.1/bs?target=esnext&pin=v135",
+    "react-regl": "https://esm.sh/react-regl@4.3.5?target=esnext&pin=v135",
+    "react-router-dom": "https://esm.sh/react-router-dom@6.4.4?target=esnext&pin=v135",
+    "react-server": "https://esm.sh/react-dom@18.2.0/server?target=esnext&pin=v135",
+    "regl": "https://esm.sh/regl@2.1.0?target=esnext&pin=v135",
+    "scaffold/": "../scaffold/",
     "tailwindcss": "https://esm.sh/tailwindcss@3.4.1?target=esnext&pin=v135",
     "threejs": "https://esm.sh/three@r139?target=esnext&pin=v135",
-    "regl": "https://esm.sh/regl@2.1.0?target=esnext&pin=v135",
-    "react-regl": "https://esm.sh/react-regl@4.3.5?target=esnext&pin=v135",
-    "gl-matrix": "https://esm.sh/gl-matrix@3.4.1?target=esnext&pin=v135",
-    "bunny": "https://esm.sh/bunny@1.0.1?target=esnext&pin=v135",
-    "angle-normals": "https://esm.sh/angle-normals@1.0.0?target=esnext&pin=v135"
+    "ts-examples/": "../examples/ts/"
   }
 }
