--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,8 @@
 {
-  "name": "scaffold.github.io",
   "lock": false,
   "compilerOptions": {
-    "allowJs": true,
+    "useUnknownInCatchVariables": true,
+    "noImplicitOverride": true,
     "strict": true,
     "lib": [
       "dom",
@@ -23,7 +23,7 @@
       ],
       "include": [
         "ban-untagged-todo",
-        "camelCase",
+        "camelcase",
         "default-param-last",
         "eqeqeq",
         "guard-for-in",
@@ -54,29 +54,38 @@
     "fmt": "deno fmt $DENO_FLAGS",
     "lint": "deno lint $DENO_FLAGS",
     "bundle-css": "deno run --allow-all npm:tailwindcss --input main.css --output build/main.css --minify $DENO_FLAGS",
-    "bundle-js": "deno run $DENO_FLAGS --allow-all --check build.tsx",
+    "bundle-js": "deno run $DENO_FLAGS --allow-all build.tsx",
     "old-bundle-js": "deno bundle $DENO_FLAGS --check app.tsx static/build/index.js",
-    "bundle-worker": "deno bundle $DENO_FLAGS --check ../scaffold/src/worker/worker.ts build/worker.js",
+    "bundle-worker": "echo deno bundle $DENO_FLAGS --check ../scaffold/src/worker/worker.ts build/worker.js",
     "serve-build": "deno run --allow-net --allow-read https://deno.land/std@0.217.0/http/file_server.ts build/ --port 17542 --header 'Cross-Origin-Opener-Policy: same-origin' --header 'Cross-Origin-Embedder-Policy: credentialless'"
   },
   "imports": {
-    "$std/": "https://deno.land/std@0.217.0/",
     "@std/bytes": "jsr:@std/bytes@^1.0.0",
     "@std/data-structures": "jsr:@std/data-structures@^0.225.2",
+    "@std/fs": "jsr:@std/fs@^1.0.8",
+    "@std/path": "jsr:@std/path@^1.0.8",
     "_scaffold/": "https://raw.githubusercontent.com/scaffold/scaffold/main/",
     "angle-normals": "https://esm.sh/angle-normals@1.0.0?target=esnext&pin=v135",
     "bunny": "https://esm.sh/bunny@1.0.1?target=esnext&pin=v135",
     "gl-matrix": "https://esm.sh/gl-matrix@3.4.1?target=esnext&pin=v135",
-    "react": "https://esm.sh/react@18.2.0?target=esnext&pin=v135",
-    "react-dom": "https://esm.sh/react-dom@18.2.0?target=esnext&pin=v135",
-    "react-icons/bs": "https://esm.sh/react-icons@4.10.1/bs?target=esnext&pin=v135",
-    "react-regl": "https://esm.sh/react-regl@4.3.5?target=esnext&pin=v135",
-    "react-router-dom": "https://esm.sh/react-router-dom@6.4.4?target=esnext&pin=v135",
-    "react-server": "https://esm.sh/react-dom@18.2.0/server?target=esnext&pin=v135",
     "regl": "https://esm.sh/regl@2.1.0?target=esnext&pin=v135",
-    "scaffold/": "../scaffold/",
     "tailwindcss": "https://esm.sh/tailwindcss@3.4.1?target=esnext&pin=v135",
     "threejs": "https://esm.sh/three@r139?target=esnext&pin=v135",
-    "ts-examples/": "../examples/ts/"
+    "react": "npm:react@19.0.0",
+    "react-dom": "npm:react-dom@19.0.0",
+    "react-icons": "npm:react-icons@4.10.1",
+    "react-router-dom": "npm:react-router-dom@6.4.4",
+    "scaffold/": "../scaffold/",
+    "ts-examples/": "../examples/ts/",
+
+
+    "@noble/secp256k1": "jsr:@noble/secp256k1@^2.1.0",
+    "@std/assert": "jsr:@std/assert@^1.0.10",
+    "@std/async": "jsr:@std/async@^1.0.9",
+    "@std/cli": "jsr:@std/cli@^1.0.9",
+    "@std/encoding": "jsr:@std/encoding@^1.0.6",
+    "@std/io": "jsr:@std/io@^0.225.0",
+    "@std/log": "jsr:@std/log@^0.224.12",
+    "dnt": "https://deno.land/x/dnt@0.39.0/mod.ts"
   }
 }
